Removing commented code and unnecessary files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "author": "Nathaniel Tesfalidet and Yuanyuan Shen",
+  "description": "A web app that allows gamers to add their favorites video games to their carts and gaming companies to publish their video games.",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
