--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "gamehub",
   "version": "0.0.0",
+  "author": "Nathaniel Tesfalidet and Yuanyuan Shen",
+  "description": "A web app that allows gamers to add their favorites video games to their carts and gaming companies to publish their video games.",
   "private": true,
   "scripts": {
     "start": "node ./node_modules/nodemon/bin/nodemon.js ./bin/www"
