--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
+    "eslint": "7.11.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "^7.27.0",
     "prettier": "^2.4.1"
   }
 }
