changes script in package.json from heroku-postbuild to heroku-prebuild

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "A web app that allows gamers to add their favorites video games to their carts and gaming companies to publish their video games.",
   "private": true,
   "scripts": {
-    "start": "node ./node_modules/nodemon/bin/nodemon.js ./bin/www",
-    "heroku-postbuild": "cd frontend && yarn install && yarn build"
+    "heroku-prebuild": "cd frontend && yarn install && yarn run build",
+    "start": "node ./node_modules/nodemon/bin/nodemon.js ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
